# atlas

./: .gitignore  PROJECT_STRUCTURE_SIMPLIFICATION.md  README.md  audit_report.md  commit-frontend-cleanup.sh  git-init.sh
backend/: .env.example  .gitignore  README.md  debug_auth.py  docker-compose.yml  generate_patients.py  init_db.py  pyproject.toml  recreate_db.py  seed_data.py  setup.sh
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  dependencies.py  security.py
backend/app/middleware/: __init__.py  cache_headers.py  delay.py  error_handlers.py  hl7_parser.py  simulation.py
backend/app/models/: __init__.py  affiliation_pricing.py  aliquot.py  billing.py  lab_audit.py  order.py  patient.py  report.py  sample.py  test.py  user.py
backend/app/schemas/: enums.py  error.py  order.py  pagination.py  patient.py  payment.py  responses.py  sample.py  test.py  user.py
backend/db_scripts/: __init__.py  add_rejection_history_column.py  generate_orders.py  generate_patients.py  generate_payments.py  generate_tests.py  generate_users.py  migrate_order_status.py  migrate_rejection_history.py  populate_samples.py  reset_lab_data.py  seed_affiliation_pricing.py  seed_lis_6months.py  simulate_history.py  test_rejection_workflow.py
backend/migrations/: 001_add_result_immutability_trigger.sql  002_make_audit_log_immutable.sql  003_add_sample_fk_constraint.sql  004_add_test_status_escalated.sql  005_add_order_test_timestamps.sql  006_add_lab_operation_log_comment.sql  007_fill_payments_columns.sql  README.md
(+1104 files in other folders)
