[tool.poetry]
name = "atlas-backend"
version = "0.1.0"
description = "FastAPI backend for Atlas Laboratory Management System"
authors = ["Atlas Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.9"
python-dateutil = "^2.8.2"
faker = "^40.1.2"
niafaker = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
